make sure swagger work
